loopwhile.LoopWhile.scala.error
Compilation error:
LoopWhile:1: error: value update is not a member of Boolean
while (isFacingWall()=False) {
       ^LoopWhile:1: error: not found: value False
while (isFacingWall()=False) {
                      ^